--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,11 +6,17 @@ body,
   min-height: 100vh;
   margin: 0;
   padding: 0;
-  font-family: "Lato";
+  font-family: "Cairo", sans-serif;
 }
 
-.title {
-  font-weight: 700;
+* {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+input,
+button {
+  font-family: "Cairo", sans-serif;
 }
 
 #root {
@@ -18,7 +24,10 @@ body,
 }
 
 .user-select-none {
-  user-select: none;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 .loader-page {
@@ -28,9 +37,15 @@ body,
   right: 0;
   bottom: 0;
   z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
 .spinner {
@@ -39,7 +54,6 @@ body,
   height: 40px;
   position: relative;
   text-align: center;
-
   -webkit-animation: sk-rotate 2s infinite linear;
   animation: sk-rotate 2s infinite linear;
 }
@@ -53,7 +67,6 @@ body,
   top: 0;
   background-color: black;
   border-radius: 100%;
-
   -webkit-animation: sk-bounce 2s infinite ease-in-out;
   animation: sk-bounce 2s infinite ease-in-out;
 }
@@ -70,6 +83,7 @@ body,
     -webkit-transform: rotate(360deg);
   }
 }
+
 @keyframes sk-rotate {
   100% {
     transform: rotate(360deg);
@@ -98,3 +112,8 @@ body,
     -webkit-transform: scale(1);
   }
 }
+
+::-webkit-input-placeholder {
+  text-align: center;
+}
+/*# sourceMappingURL=index.css.map */
