--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,11 @@
-html,
-body,
-#root {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
+body {
+  font-family: "Cairo", sans-serif;
   margin: 0;
   padding: 0;
-  font-family: "Cairo", sans-serif;
+}
+
+#root {
+  min-height: 100vh;
 }
 
 * {
